// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 9rem;
  background-color: 'transparent';
}

<div
  className="c0"
/>
`;

exports[`Header.styles Content DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  width: 100%;
  height: 2.125rem;
  top: 3.438rem;
}

<div
  className="c0"
/>
`;

exports[`Header.styles Overlay DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 9rem;
  background-color: #00000080;
}

@media (max-width:768px) {
  .c0 {
    display: none;
  }
}

<div
  className="c0"
/>
`;

exports[`Header.styles Video DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100vw;
  height: 100%;
  object-fit: cover;
}

@media (max-width:768px) {
  .c0 {
    display: none;
  }
}

<video
  className="c0"
  src="video.mp4"
/>
`;
